@@ -1,5 +1,11 @@
 2018-05-19  Chung-Ju Wu  <jasonwucj@gmail.com>
 
+	* config/nds32/nds32.c
+	(nds32_md_asm_adjust): Consider flag_inline_asm_r15 variable.
+	* config/nds32/nds32.opt (minline-asm-r15): New option.
+
+2018-05-19  Chung-Ju Wu  <jasonwucj@gmail.com>
+
 	* common/config/nds32/nds32-common.c (TARGET_DEFAULT_TARGET_FLAGS): Add
 	MASK_HW_ABS.
 	* config/nds32/nds32.md (abssi2): New pattern.
